photo looping mechanism

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongoose": "^8.19.1",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-fast-marquee": "^1.6.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
